--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,19 +21,19 @@ slug:
 
 collections:
   - name: "settings"
-    label: "⚙️ Configuración General"
+    label: "⚙️ Ustawienia ogólne"
     files:
       - name: "site"
-        label: "Información del Sitio"
+        label: "Informacje o stronie"
         file: "src/data/site.json"
         fields:
-          - { label: "Nombre del Sitio", name: "title", widget: "string", required: true }
-          - { label: "Descripción", name: "description", widget: "text", required: true }
+          - { label: "Nazwa strony", name: "title", widget: "string", required: true }
+          - { label: "Opis", name: "description", widget: "text", required: true }
           - { label: "Email", name: "email", widget: "string", required: true }
-          - { label: "Teléfono", name: "phone", widget: "string", required: true }
-          - { label: "Ubicación", name: "location", widget: "string", required: true }
+          - { label: "Telefon", name: "phone", widget: "string", required: true }
+          - { label: "Lokalizacja", name: "location", widget: "string", required: true }
           - { label: "Logo", name: "logo", widget: "image", required: false }
-          - label: "Redes Sociales"
+          - label: "Media społecznościowe"
             name: "social"
             widget: "object"
             fields:
@@ -42,139 +42,139 @@ collections:
               - { label: "LinkedIn", name: "linkedin", widget: "string", required: false }
               - { label: "WhatsApp", name: "whatsapp", widget: "string", required: false }
       - name: "navigation"
-        label: "Navegación"
+        label: "Nawigacja"
         file: "src/data/navigation.json"
         fields:
-          - label: "Menú de Navegación"
+          - label: "Menu nawigacyjne"
             name: "navbar"
             widget: "object"
             fields:
-              - { label: "Inicio", name: "home", widget: "string", default: "Inicio" }
-              - { label: "Sobre Mí", name: "about", widget: "string", default: "Sobre Mí" }
-              - { label: "Servicios", name: "services", widget: "string", default: "Servicios" }
-              - { label: "Galería", name: "gallery", widget: "string", default: "Galería" }
-              - { label: "Contacto", name: "contact", widget: "string", default: "Contacto" }
-              - { label: "Alt del Logo", name: "logo_alt", widget: "string", default: "Karolina Fotografía" }
-              - { label: "Menú Móvil", name: "mobile_menu_label", widget: "string", default: "Abrir menú" }
+              - { label: "Strona główna", name: "home", widget: "string", default: "Strona główna" }
+              - { label: "O mnie", name: "about", widget: "string", default: "O mnie" }
+              - { label: "Usługi", name: "services", widget: "string", default: "Usługi" }
+              - { label: "Galeria", name: "gallery", widget: "string", default: "Galeria" }
+              - { label: "Kontakt", name: "contact", widget: "string", default: "Kontakt" }
+              - { label: "Opis alternatywny logotypu", name: "logo_alt", widget: "string", default: "Karolina Fotografia" }
+              - { label: "Menu mobilne", name: "mobile_menu_label", widget: "string", default: "Otwórz menu" }
 
   - name: "hero"
-    label: "🏠 Sección Principal"
+    label: "🏠 Sekcja główna"
     files:
       - name: "hero"
-        label: "Hero Section"
+        label: "Sekcja główna"
         file: "src/data/hero.json"
         fields:
-          - { label: "Título Principal", name: "title", widget: "string", required: true }
-          - { label: "Palabra Destacada", name: "accent", widget: "string", required: true }
-          - { label: "Descripción", name: "description", widget: "text", required: true }
-          - { label: "Imagen Principal", name: "image", widget: "image", required: true }
-          - label: "Botones"
+          - { label: "Nagłówek", name: "title", widget: "string", required: true }
+          - { label: "Wyróżnione słowo", name: "accent", widget: "string", required: true }
+          - { label: "Opis", name: "description", widget: "text", required: true }
+          - { label: "Obraz główny", name: "image", widget: "image", required: true }
+          - label: "Przyciski"
             name: "buttons"
             widget: "object"
             fields:
-              - { label: "Texto Botón Principal", name: "primary_text", widget: "string", default: "Reservar Sesión" }
-              - { label: "Enlace Botón Principal", name: "primary_link", widget: "string", default: "#contacto" }
-              - { label: "Texto Botón Secundario", name: "secondary_text", widget: "string", default: "Ver Portfolio" }
-              - { label: "Enlace Botón Secundario", name: "secondary_link", widget: "string", default: "#galeria" }
+              - { label: "Tekst głównego przycisku", name: "primary_text", widget: "string", default: "Zarezerwuj sesję" }
+              - { label: "Link głównego przycisku", name: "primary_link", widget: "string", default: "#kontakt" }
+              - { label: "Tekst drugiego przycisku", name: "secondary_text", widget: "string", default: "Zobacz portfolio" }
+              - { label: "Link drugiego przycisku", name: "secondary_link", widget: "string", default: "#galeria" }
 
   - name: "about"
-    label: "👤 Sobre Mí"
+    label: "👤 O mnie"
     files:
       - name: "about"
-        label: "Información Personal"
+        label: "Informacje osobiste"
         file: "src/data/about.json"
         fields:
-          - { label: "Título", name: "title", widget: "string", required: true }
-          - { label: "Subtítulo", name: "subtitle", widget: "string", required: true }
-          - { label: "Descripción 1", name: "description1", widget: "text", required: true }
-          - { label: "Descripción 2", name: "description2", widget: "text", required: true }
-          - { label: "Años de Experiencia", name: "experience", widget: "number", required: true }
-          - { label: "Imagen", name: "image", widget: "image", required: true }
-          - label: "Estadísticas"
+          - { label: "Tytuł", name: "title", widget: "string", required: true }
+          - { label: "Podtytuł", name: "subtitle", widget: "string", required: true }
+          - { label: "Opis 1", name: "description1", widget: "text", required: true }
+          - { label: "Opis 2", name: "description2", widget: "text", required: true }
+          - { label: "Lata doświadczenia", name: "experience", widget: "number", required: true }
+          - { label: "Zdjęcie", name: "image", widget: "image", required: true }
+          - label: "Statystyki"
             name: "stats"
             widget: "list"
             fields:
-              - { label: "Número", name: "number", widget: "string" }
-              - { label: "Descripción", name: "description", widget: "string" }
+              - { label: "Liczba", name: "number", widget: "string" }
+              - { label: "Opis", name: "description", widget: "string" }
 
   - name: "services"
-    label: "💼 Servicios"
+    label: "💼 Usługi"
     files:
       - name: "services"
-        label: "Lista de Servicios"
+        label: "Lista usług"
         file: "src/data/services.json"
         fields:
-          - { label: "Título de la Sección", name: "section_title", widget: "string", default: "Mis Servicios" }
-          - { label: "Subtítulo", name: "section_subtitle", widget: "text", default: "Servicios fotográficos profesionales" }
-          - label: "Servicios"
+          - { label: "Tytuł sekcji", name: "section_title", widget: "string", default: "Moje usługi" }
+          - { label: "Podtytuł", name: "section_subtitle", widget: "text", default: "Profesjonalne usługi fotograficzne" }
+          - label: "Usługi"
             name: "services"
             widget: "list"
             fields:
-              - { label: "Nombre", name: "name", widget: "string", required: true }
-              - { label: "Descripción", name: "description", widget: "text", required: true }
-              - { label: "Precio", name: "price", widget: "string", required: true }
-              - { label: "Imagen", name: "image", widget: "image", required: true }
-              - { label: "Destacado", name: "featured", widget: "boolean", default: false }
-              - { label: "Orden", name: "order", widget: "number", default: 1 }
-              - label: "Características"
+              - { label: "Nazwa", name: "name", widget: "string", required: true }
+              - { label: "Opis", name: "description", widget: "text", required: true }
+              - { label: "Cena", name: "price", widget: "string", required: true }
+              - { label: "Zdjęcie", name: "image", widget: "image", required: true }
+              - { label: "Wyróżnione", name: "featured", widget: "boolean", default: false }
+              - { label: "Kolejność", name: "order", widget: "number", default: 1 }
+              - label: "Cechy"
                 name: "features"
                 widget: "list"
-                field: { label: "Característica", name: "feature", widget: "string" }
+                field: { label: "Cecha", name: "feature", widget: "string" }
 
   - name: "gallery"
-    label: "📸 Galería"
+    label: "📸 Galeria"
     files:
       - name: "gallery"
-        label: "Imágenes"
+        label: "Zdjęcia"
         file: "src/data/gallery.json"
         fields:
-          - { label: "Título de la Sección", name: "section_title", widget: "string", default: "Mi Portfolio" }
-          - { label: "Subtítulo", name: "section_subtitle", widget: "text", default: "Mis trabajos destacados" }
-          - label: "Imágenes"
+          - { label: "Tytuł sekcji", name: "section_title", widget: "string", default: "Moje portfolio" }
+          - { label: "Podtytuł", name: "section_subtitle", widget: "text", default: "Moje najważniejsze prace" }
+          - label: "Zdjęcia"
             name: "images"
             widget: "list"
             fields:
-              - { label: "Título", name: "title", widget: "string", required: true }
-              - { label: "Descripción", name: "description", widget: "string", required: true }
-              - { label: "Imagen", name: "image", widget: "image", required: true }
-              - label: "Categoría"
+              - { label: "Tytuł", name: "title", widget: "string", required: true }
+              - { label: "Opis", name: "description", widget: "string", required: true }
+              - { label: "Obraz", name: "image", widget: "image", required: true }
+              - label: "Kategoria"
                 name: "category"
                 widget: "select"
-                options: ["retratos", "bodas", "familias", "eventos", "corporativo"]
-              - { label: "Destacada", name: "featured", widget: "boolean", default: false }
-              - { label: "Orden", name: "order", widget: "number", default: 1 }
+                options: ["portrety", "śluby", "rodziny", "wydarzenia", "firmowe"]
+              - { label: "Wyróżnione", name: "featured", widget: "boolean", default: false }
+              - { label: "Kolejność", name: "order", widget: "number", default: 1 }
 
   - name: "testimonials"
-    label: "💬 Testimonios"
+    label: "💬 Opinie"
     files:
       - name: "testimonials"
-        label: "Testimonios de Clientes"
+        label: "Opinie klientów"
         file: "src/data/testimonials.json"
         fields:
-          - { label: "Título de la Sección", name: "section_title", widget: "string", default: "Testimonios" }
-          - label: "Testimonios"
+          - { label: "Tytuł sekcji", name: "section_title", widget: "string", default: "Opinie" }
+          - label: "Opinie"
             name: "testimonials"
             widget: "list"
             fields:
-              - { label: "Nombre", name: "name", widget: "string", required: true }
-              - { label: "Testimonio", name: "content", widget: "text", required: true }
-              - { label: "Calificación", name: "rating", widget: "number", min: 1, max: 5, default: 5 }
-              - { label: "Foto", name: "photo", widget: "image", required: false }
+              - { label: "Imię", name: "name", widget: "string", required: true }
+              - { label: "Opinia", name: "content", widget: "text", required: true }
+              - { label: "Ocena", name: "rating", widget: "number", min: 1, max: 5, default: 5 }
+              - { label: "Zdjęcie", name: "photo", widget: "image", required: false }
 
   - name: "contact"
-    label: "📞 Contacto"
+    label: "📞 Kontakt"
     files:
       - name: "contact"
-        label: "Información de Contacto"
+        label: "Informacje kontaktowe"
         file: "src/data/contact.json"
         fields:
-          - { label: "Título de la Sección", name: "section_title", widget: "string", default: "Contacto" }
-          - { label: "Subtítulo", name: "section_subtitle", widget: "text", default: "Hablemos de tu proyecto" }
-          - label: "Información de Contacto"
+          - { label: "Tytuł sekcji", name: "section_title", widget: "string", default: "Kontakt" }
+          - { label: "Podtytuł", name: "section_subtitle", widget: "text", default: "Porozmawiajmy o Twoim projekcie" }
+          - label: "Dane kontaktowe"
             name: "contact_info"
             widget: "list"
             fields:
-              - { label: "Tipo", name: "type", widget: "select", options: ["email", "phone", "address", "hours"] }
-              - { label: "Etiqueta", name: "label", widget: "string" }
-              - { label: "Valor", name: "value", widget: "string" }
-              - { label: "Icono", name: "icon", widget: "string", required: false }
+              - { label: "Typ", name: "type", widget: "select", options: ["email", "telefon", "adres", "godziny"] }
+              - { label: "Etykieta", name: "label", widget: "string" }
+              - { label: "Wartość", name: "value", widget: "string" }
+              - { label: "Ikona", name: "icon", widget: "string", required: false }
