--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: git-gateway
-  branch: main
+  name: test-repo
 
 site_url: https://tu-sitio.netlify.app
 display_url: https://tu-sitio.netlify.app
